--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    background-color: #f4f4f4;
+    background-color:#ffffff;
 }
 
 input, button {
@@ -14,9 +14,9 @@ button {
     cursor: pointer;
     background-color: #007bff;
     color: white;
-    border: none;
+    border: solid 1px black;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: black;
 }
